--- a/lab2_javax/src/main/webapp/WEB-INF/web.xml
+++ b/lab2_javax/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+    <display-name>Сервлетный фильтр</display-name>
+    <filter>
+        <filter-name>simpleFilter</filter-name>
+        <filter-class>FilterForAreaCheck</filter-class>
+        <init-param>
+            <param-name>active</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>simpleFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
