--- a/lab2_jakarta/src/main/webapp/WEB-INF/web.xml
+++ b/lab2_jakarta/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
+    <display-name>Сервлетный фильтр</display-name>
+    <filter>
+        <filter-name>simpleFilter</filter-name>
+        <filter-class>FilterForAreaCheck</filter-class>
+        <init-param>
+            <param-name>active</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>simpleFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
